# dealve-tui

./: .env.example  Cargo.toml  README.md
.github/workflows/: build.yml  lint.yml  pull_request.yml  push_main.yml  release_cargo.yml  test.yml
api/: Cargo.toml
api/examples/: test_connection.rs
api/src/: endpoints.rs  types.rs
core/: Cargo.toml
core/src/: models.rs
tui/: Cargo.toml
tui/src/: app.rs  config.rs  main.rs  onboarding.rs  ui.rs
